fixed contact form button on mobile format

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -105,8 +105,7 @@
 /* Portrait and Landscape */
 @media only screen
   and (min-device-width: 768px)
-  and (max-device-width: 1024px)
-  and (-webkit-min-device-pixel-ratio: 1) {
+  and (max-device-width: 1024px){
 
     .about{
       padding-top: 15%;
@@ -143,8 +142,7 @@
 /*Phones*/
 @media screen
 and (min-device-width: 320px)
-and (max-device-width: 425px)
-and (-webkit-device-pixel-ratio: 2) {
+and (max-device-width: 425px){
 
   .about{
     padding: 30% 0 0 0;
@@ -172,8 +170,7 @@ and (-webkit-device-pixel-ratio: 2) {
 /*Small and Medium Phones*/
 @media only screen
   and (min-device-width: 320px)
-  and (max-device-width: 424px)
-  and (-webkit-min-device-pixel-ratio: 2) {
+  and (max-device-width: 424px){
 
   .about{
     padding: 40% 0 0 0;
