--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -66,8 +66,7 @@
 /*Tablets*/
 @media only screen
   and (min-device-width: 768px)
-  and (max-device-width: 1024px)
-  and (-webkit-min-device-pixel-ratio: 1) {
+  and (max-device-width: 1024px){
 
     .projects{
       margin-top: 15%;
@@ -83,8 +82,7 @@
 /*Larger Phones*/
 @media screen
 and (min-device-width: 320px)
-and (max-device-width: 425px)
-and (-webkit-device-pixel-ratio: 2) {
+and (max-device-width: 425px){
 
   .projects{
     margin: 30% 0 0 0;
@@ -102,8 +100,7 @@ and (-webkit-device-pixel-ratio: 2) {
 /*Small and Medium Phones*/
 @media only screen
   and (min-device-width: 320px)
-  and (max-device-width: 424px)
-  and (-webkit-min-device-pixel-ratio: 2) {
+  and (max-device-width: 424px) {
 
   .projects{
     margin: 40% 20%;
